# GoSQLX

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  .gosqlx.example.yml  .gosqlx.yml  .markdownlintignore  .pre-commit-config.yaml  .trivyignore  ACTION_README.md  CHANGELOG.md  CLAUDE.md  CLI_REFACTORING_SUMMARY.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPREHENSIVE_EXAMPLE_TESTING_REPORT.md  COMPREHENSIVE_INTEGRATION_TEST_REPORT.md  COMPREHENSIVE_ROADMAP_2025.md  COMPREHENSIVE_TEST_FINAL_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  CURRENT_TESTING_STATUS.md  Dockerfile  FINAL_RACE_DETECTION_VALIDATION.md  GITHUB_ACTION_IMPLEMENTATION.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  PARSER_COVERAGE_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_BENCHMARKING_DELIVERABLES.md  PHASE2_COVERAGE_SUMMARY.md  PHASE2_PROGRESS.md  PHASE3_COVERAGE_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  RELEASE_CHECKLIST_v1.0.md  RELEASE_NOTES_v1.0.md  RELEASE_NOTES_v1.5.0.md  (+27 more)
.claude/: settings.json
.github/: ACTION_INTEGRATION_GUIDE.md  ACTION_QUICK_REFERENCE.md  ACTION_TESTING_GUIDE.md  FUNDING.yml  MARKETPLACE_PUBLISHING.md  SECURITY_CHECKLIST.md  dependabot.yml  labeler.yml  pull_request_template.md  stale.yml
action/: entrypoint.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECT_REVIEW_2026-04-16.md  CLEAN_ARCHITECTURE.md  CLI_GUIDE.md  CODE_QUALITY_AUDIT.md  COMPARISON.md  CONFIGURATION.md  DOC-001-COMPLETION-SUMMARY.md  ERROR_CODES.md  ERROR_REFERENCE.md  FIXES_APPLIED.md  FUZZ_TESTING_GUIDE.md  GETTING_STARTED.md  LINTING_RULES.md  LSP_GUIDE.md  MCP_GUIDE.md  MIGRATION.md  MULTI_ROW_INSERT.md  (+11 more)
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
python/pygosqlx/: __init__.py  core.py  exceptions.py
python/tests/: test_integration.py  test_types.py
(+1143 files in other folders)
