[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygosqlx"
version = "0.1.0"
description = "Python bindings for GoSQLX - High-performance SQL parser"
requires-python = ">=3.8"
license = {text = "AGPL-3.0"}
authors = [
    {name = "GoSQLX Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ajitpratap0/GoSQLX"
Repository = "https://github.com/ajitpratap0/GoSQLX"
Issues = "https://github.com/ajitpratap0/GoSQLX/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["pygosqlx*"]

[tool.setuptools.package-data]
pygosqlx = ["lib/*", "py.typed"]
